# audacity

cmake-proxies/: CMakeLists.txt
cmake-proxies/libflac/: CMakeLists.txt
cmake-proxies/libid3tag/: CMakeLists.txt
cmake-proxies/portmixer/: CMakeLists.txt
